feat: 자동차의 이름에 중복이 존재하는 경우의 예외 처리 기능 추가